# glasses

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg
scripts/: run_on_minikube.py
src/glasses/: app.css  app.py  app.tcss  dependencies.py  k8client.py  layout.css  log_parser.py  log_provider.py  log_viewer.css  log_viewer.py  logger.py  modal.py  namespace_provider.py  nested_list_view.py  plain_text_parser.py  reactive_model.py  settings.py
src/glasses/controllers/: log_data.txt  log_provider.py
src/glasses/log_parsers/: json_parser.py
src/glasses/widgets/: dialog.py  input_with_label.py  log_viewer.py  modal.py  nested_list_view.py  search.py
tests/: test_dummy_log_provider.py  test_json_log_parser.py  test_k8_client.py  test_k8_log_provider.py  test_log_viewer.py  test_namespace_provider.py  test_reactive_model.py
