[tool.poetry]
name = "glasses"
version = "0.3.0"
description = ""
authors = ["Sander Teunissen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.9.1"
pydantic = "^1.10.2"
kubernetes = "^25.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
ruff = "^0.0.237"
black = "^22.12.0"
textual = { extras = ["dev"], version = ">=0.8.0" }
pytest-asyncio = "^0.20.3"
pytest-icdiff = "^0.6"
nox = "^2022.11.21"
pre-commit = "^2.21.0"
pyproject-fmt = "^0.4.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry.scripts]
glasses = "glasses.app:run"

[tool.ruff]

src = [
  'src',  # if omitted, Isort messes up sorting of primary and secondary pacakges.
  'test',
]

select = [
  "E",
  "F",
  "I", # isort
]
ignore = [
  'E501', # line-length. Black handles this.
]

[tool.ruff.per-file-ignores]
'src/glasses/log_parser.py' = ['E999']   # switch statement ignore
'src/glasses/dependencies.py' = ['E999'] # switch statement ignore
